--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <img src="Speen.gif" alt="comi o cu de quemtá lendo" srcset="">
+    <img src="wangzhe.gif" alt="comi o cu de quemtá lendo" srcset="">
 
-<p>Meu nome é Lucas</p>
+<p>Meu nome é Júlio César</p>
     <h1>Sou estudante em programação</h1>
 <p>
      Estudo em uma escola estadual sobre programação, estou no segundo ano do ensino médio
@@ -21,7 +21,7 @@
 <div></div>
 
 <p>Programação básica (Scratch, HTML)</p>
-<p>Arte tradicional e digital básica</p>
+<p>Informática básica</p>
 
 <div></div>
 
